application-manifests/kuberchatter-api.yml
apiVersion: v1
kind: Service
metadata:
  name: kuberchatter-api-svc
  labels:
    app: kuberchatter-api
spec:
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: kuberchatter-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberchatter-api-deployment
  labels:
    app: kuberchatter-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuberchatter-api
  template:
    metadata:
      labels:
        app: kuberchatter-api
    spec:
      containers:
      - name: kuberchatter-api
        imagePullPolicy: Always
        image: zergov/kuberchatter-api:34a3490
        ports:
        - containerPort: 5000
