application-manifests/kuberchatter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kuberchatter-web-svc
          servicePort: 80
