application-manifests/loadbalancer-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: kuberchatter-api-svc
          servicePort: 5000
      - path: /chat/*
        backend:
          serviceName: kuberchatter-chat-svc
          servicePort: 8080
      - path: /*
        backend:
          serviceName: kuberchatter-web-svc
          servicePort: 80
